# rp3ba

./: CMakeLists.txt  LICENSE  README.md  package.xml
launch/: robot.launch.py  simultaneous.launch.py  virtual.launch.py
meshes/: L1_Link.STL  L2_Link.STL  L3_Link.STL  MB_Link.STL  Mango_Link.STL  Pantalla_Link.STL  World_Link.STL
rviz/: config.rviz
scripts/: inv_kinematics.py  inv_kinematics_node.py  platform_state_node.py  twistPose2TF.py
src/: trajectory_node.cpp  trayectoria_r.cpp  twist_mean_filter_node.cpp  u2d2_node.cpp
urdf/: arms.urdf  mango.urdf  mobile.urdf
